<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/nombre_dp"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:maxLines="1"
                android:text="@string/nombre_completo"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/titulo_codigo_profesional"/>

            <TextView
                android:id="@+id/tvProfessionalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:maxLines="1"
                android:text="@string/codigo_profesional"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:maxLines="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/titulo_especialidad"/>

            <TextView
                android:id="@+id/tvSpeciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginHorizontal="15dp"
                android:text="@string/especialidad"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditDoctor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/black"
            android:background="@drawable/editar_128"/>

        <Button
            android:id="@+id/btnDeleteDoctor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/eliminar_128"/>

    </LinearLayout>

</LinearLayout>