<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".iu.administrator.agregarpaciente.AgregarPacienteFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0100C1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registrar_paciente"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/nombre"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="aábcdeéfghiíjklmnñoópqrstuúvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚVWXYZ"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/apellido"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="aábcdeéfghiíjklmnñoópqrstuúvwxyz AÁBCDEÉFGHIÍJKLMNÑOÓPQRSTUÚVWXYZ"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itlBirthDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/fecha_de_nacimiento"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:clickable="true"
                    android:paddingHorizontal="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIdentificationCard"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/identificacion"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIdentificationCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingHorizontal="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/esta_en_tratamiento_pregunta"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbIsInTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCreatePatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingVertical="15dp"
                android:backgroundTint="#0100C1"
                android:text="@string/registrar_paciente" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>